# lol-analytics-platform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data_dictionary.md  sprint-1-validation.md  sprint-2-validation.md
docs/adr/: 001-delta-over-parquet.md  002-scd2-dim-champion.md  003-clustering-strategy.md  004-databricks-first-simplification.md
docs/setup/: databricks_workspace.md
notebooks/: README.md
notebooks/bronze/: 01_ingest_matches.py  02_ingest_leagues.py
notebooks/setup/: 01_validate_bronze.py  02_validate_ingestion.py  03_create_secret_scope.py
sql/ddl/: 01_bronze.sql
src/lol_analytics/bronze/: dead_letter.py  delta_sinks.py  ingestion_log.py  payload_hash.py  records.py  writer.py
src/lol_analytics/ingestion/: bootstrap.py  cli.py  rate_limiter.py  riot_client.py  runners.py  smoke_test.py
src/lol_analytics/utils/: config.py  logging.py
tests/: conftest.py
tests/unit/: test_rate_limiter.py  test_riot_client.py
tests/unit/bronze/: test_dead_letter.py  test_ingestion_log.py  test_payload_hash.py  test_records.py  test_writer_spark.py
tests/unit/ingestion/: test_runners.py
