[project]
name = "lol-analytics-platform"
version = "0.1.0"
description = "End-to-end data engineering pipeline for League of Legends meta-game analytics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Christian Kenzo Seki" },
]
license = { text = "MIT" }
keywords = ["data-engineering", "databricks", "delta-lake", "pyspark", "league-of-legends"]

dependencies = [
    # HTTP client — httpx is async-capable and faster than requests
    "httpx>=0.27.0",
    # Retry logic with exponential backoff
    "tenacity>=9.0.0",
    # Config loading
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Structured logging
    "structlog>=24.4.0",
    # CLI
    "typer>=0.12.5",
]

[project.optional-dependencies]
spark = [
    # PySpark + Delta — only needed when running locally outside Databricks
    "pyspark>=3.5.0",
    "delta-spark>=3.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",            # httpx mocking
    "chispa>=0.10.1",            # PySpark DataFrame assertions
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
lol-ingest = "lol_analytics.ingestion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lol_analytics"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]      # allow assert in tests
# typer requires typer.Option()/Argument() as call-in-default; B008 is a
# false positive for the CLI module.
"src/lol_analytics/ingestion/cli.py" = ["B008"]

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=lol_analytics",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
    "spark: tests requiring a SparkSession (slow)",
]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pyspark.*", "delta.*", "chispa.*"]
ignore_missing_imports = true
